Fix menu still too long

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -85,7 +85,7 @@ app-celestial-bg {
   border-radius: 1vmin;
   width: fit-content;
   max-width: 100vmin;
-  max-height: calc(100vh - 4ch);
+  max-height: 90vh;
   overflow-y: scroll;
   color: whitesmoke;
 }
